[gd_scene load_steps=14 format=3 uid="uid://c4sou82px1xdb"]

[ext_resource type="Script" uid="uid://ctiavvy0imb50" path="res://scripts/player/player.gd" id="1_v0tg1"]
[ext_resource type="Script" uid="uid://31ssbp6sqvbv" path="res://scripts/player/smooth_camera.gd" id="2_daxn3"]
[ext_resource type="PackedScene" uid="uid://bkrmfxk6fkqcu" path="res://weapons/rifle.tscn" id="3_1t1u0"]
[ext_resource type="PackedScene" uid="uid://dep7ih6l8knpj" path="res://weapons/smg.tscn" id="3_8nwpn"]
[ext_resource type="Script" uid="uid://uutfntgtgewn" path="res://scripts/weapon/weapon_handler.gd" id="3_e2av0"]
[ext_resource type="Script" uid="uid://bc6dhcam2ie8j" path="res://scripts/player/crosshair.gd" id="4_arlau"]
[ext_resource type="Texture2D" uid="uid://dw40nrjfx6vfb" path="res://assets/textures/damage.png" id="5_jtcto"]
[ext_resource type="PackedScene" uid="uid://dcx1jx1bb2nfj" path="res://characters/main_character/gameover_menu.tscn" id="6_1t1u0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5ewka"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_df5ci"]

[sub_resource type="Animation" id="Animation_jtcto"]
resource_name = "take_damagae"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("damage_texture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("damage_texture:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1t1u0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("damage_texture:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("damage_texture:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0crxk"]
_data = {
&"RESET": SubResource("Animation_1t1u0"),
&"take_damage": SubResource("Animation_jtcto")
}

[node name="player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_v0tg1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_5ewka")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_df5ci")

[node name="camera_pivot" type="Node3D" parent="."]

[node name="smooth_camera" type="Camera3D" parent="camera_pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
top_level = true
cull_mask = 1048573
script = ExtResource("2_daxn3")

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="camera_pivot/smooth_camera"]
remote_path = NodePath("../../../SubViewportContainer/SubViewport/weapon_camera")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="weapon_camera" type="Camera3D" parent="SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
cull_mask = 1047554
fov = 40.0

[node name="weapon_handler" type="Node3D" parent="SubViewportContainer/SubViewport/weapon_camera" node_paths=PackedStringArray("weapon_1", "weapon_2")]
script = ExtResource("3_e2av0")
weapon_1 = NodePath("rifle")
weapon_2 = NodePath("smg")

[node name="rifle" parent="SubViewportContainer/SubViewport/weapon_camera/weapon_handler" instance=ExtResource("3_1t1u0")]
visible = false

[node name="smg" parent="SubViewportContainer/SubViewport/weapon_camera/weapon_handler" instance=ExtResource("3_8nwpn")]
visible = false

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="crosshair" type="Control" parent="CenterContainer"]
layout_mode = 2
script = ExtResource("4_arlau")

[node name="damage_texture" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576, 324)
mouse_filter = 2
texture = ExtResource("5_jtcto")

[node name="AnimationPlayer" type="AnimationPlayer" parent="damage_texture"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_0crxk")
}

[node name="gameover_menu" parent="." instance=ExtResource("6_1t1u0")]
visible = false
